--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run:
+        run:
           python3 -m venv venv 
           . ./venv/bin/activate
           python3 -m pip install --upgrade pip
           pip3 install -r requirements.txt
           uvicorn main:app --reload
       - name: Run a one-line script
-      - run: echo Hello, world!
+        run: echo Hello, world!
