a step cannot have both the  and  keys

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-        run:
+      - run:
           python3 -m venv venv 
           . ./venv/bin/activate
           python3 -m pip install --upgrade pip
