--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,5 +21,5 @@ jobs:
         key: ${{ secrets.TEST_SECRET }}
         passphrase: ${{ secrets.PASSPHRASE }}
         port: ${{ secrets.PORT }}
-        source: "tests/a.txt,tests/b.txt"
-        target: "test"
+        source: dist
+        target: "/home/mortyneous/GIT/fastapi_test/"
